--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "multer": "^2.0.2",
     "pg": "^8.16.3",
     "pino": "^9.4.0",
-    "pino-http": "^10.3.0"
+    "pino-http": "^10.3.0",
+    "razorpay": "^2.9.5"
   },
   "devDependencies": {
     "@types/compression": "^1.8.1",
